Added more swagger documentation and endpoint to retrieve entrepreneur by ID.
